--- a/index.html
+++ b/index.html
@@ -64,12 +64,36 @@
       </tr>
     </table>
 
-    <h2 style="text-align: center;">CSS</h2>
+    <h2 style="text-align: center;">BOOTSTRAP</h2>
     <table border="1">
       <tr>
         <th>Task Name</th>
         <th>Task Link</th>
       </tr>
+        <td>Task 1</td>
+        <td><a href="js_task1.html">Link-1</a></td>
+      </tr>
+      <tr>
+        <td>Task 2</td>
+        <td><a href="js_task2.html">Link-2</a></td>
+      </tr>
+      <tr>
+        <td>Task 3</td>
+        <td><a href="js_task3.html">Link-3</a></td>
+      </tr>
+      <tr>
+        <td>Task 4</td>
+        <td><a href="js_task4.html">Link-4</a></td>
+      </tr>
+      <tr>
+        <td>Task 5</td>
+        <td><a href="js_task5.html">Link-5</a></td>
+      </tr>
+      <tr>
+        <td>Task 6</td>
+        <td><a href="js_task6.html">Link-5</a></td>
+      </tr>
+      <tr>
       
     </table>
 </div>
